Correct the sidebar tab alignment with edge of content

--- a/frontend/public/components/_horizontal-nav.scss
+++ b/frontend/public/components/_horizontal-nav.scss
@@ -78,7 +78,10 @@ $co-m-horizontal-nav__menu-item-link-padding-lr-mobile: 15px;
 
 .overview__sidebar {
   .co-m-horizontal-nav__menu {
-    padding: 0 20px;
+    padding: 0 5px;
+    @media (min-width: $grid-float-breakpoint) {
+      padding: 0 20px;
+    }
   }
   .co-m-horizontal-nav__menu-item {
     font-size: 16px;
